--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "03bd236a",
    "metadata": {},
    "outputs": [
@@ -10,124 +10,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting streamlit\n",
-      "  Using cached streamlit-1.44.1-py3-none-any.whl.metadata (8.9 kB)\n",
-      "Collecting altair<6,>=4.0 (from streamlit)\n",
-      "  Using cached altair-5.5.0-py3-none-any.whl.metadata (11 kB)\n",
-      "Collecting blinker<2,>=1.0.0 (from streamlit)\n",
-      "  Using cached blinker-1.9.0-py3-none-any.whl.metadata (1.6 kB)\n",
-      "Collecting cachetools<6,>=4.0 (from streamlit)\n",
-      "  Using cached cachetools-5.5.2-py3-none-any.whl.metadata (5.4 kB)\n",
-      "Collecting click<9,>=7.0 (from streamlit)\n",
-      "  Using cached click-8.1.8-py3-none-any.whl.metadata (2.3 kB)\n",
-      "Collecting numpy<3,>=1.23 (from streamlit)\n",
-      "  Using cached numpy-2.2.5-cp313-cp313-win_amd64.whl.metadata (60 kB)\n",
-      "Collecting packaging<25,>=20 (from streamlit)\n",
-      "  Using cached packaging-24.2-py3-none-any.whl.metadata (3.2 kB)\n",
-      "Collecting pandas<3,>=1.4.0 (from streamlit)\n",
-      "  Using cached pandas-2.2.3-cp313-cp313-win_amd64.whl.metadata (19 kB)\n",
-      "Collecting pillow<12,>=7.1.0 (from streamlit)\n",
-      "  Using cached pillow-11.2.1-cp313-cp313-win_amd64.whl.metadata (9.1 kB)\n",
-      "Collecting protobuf<6,>=3.20 (from streamlit)\n",
-      "  Using cached protobuf-5.29.4-cp310-abi3-win_amd64.whl.metadata (592 bytes)\n",
-      "Collecting pyarrow>=7.0 (from streamlit)\n",
-      "  Using cached pyarrow-19.0.1-cp313-cp313-win_amd64.whl.metadata (3.4 kB)\n",
-      "Collecting requests<3,>=2.27 (from streamlit)\n",
-      "  Using cached requests-2.32.3-py3-none-any.whl.metadata (4.6 kB)\n",
-      "Collecting tenacity<10,>=8.1.0 (from streamlit)\n",
-      "  Using cached tenacity-9.1.2-py3-none-any.whl.metadata (1.2 kB)\n",
-      "Collecting toml<2,>=0.10.1 (from streamlit)\n",
-      "  Using cached toml-0.10.2-py2.py3-none-any.whl.metadata (7.1 kB)\n",
-      "Collecting typing-extensions<5,>=4.4.0 (from streamlit)\n",
-      "  Using cached typing_extensions-4.13.2-py3-none-any.whl.metadata (3.0 kB)\n",
-      "Collecting watchdog<7,>=2.1.5 (from streamlit)\n",
-      "  Using cached watchdog-6.0.0-py3-none-win_amd64.whl.metadata (44 kB)\n",
-      "Collecting gitpython!=3.1.19,<4,>=3.0.7 (from streamlit)\n",
-      "  Using cached GitPython-3.1.44-py3-none-any.whl.metadata (13 kB)\n",
-      "Collecting pydeck<1,>=0.8.0b4 (from streamlit)\n",
-      "  Using cached pydeck-0.9.1-py2.py3-none-any.whl.metadata (4.1 kB)\n",
-      "Requirement already satisfied: tornado<7,>=6.0.3 in c:\\users\\public\\git\\sparta_lecture\\.venv\\lib\\site-packages (from streamlit) (6.4.2)\n",
-      "Collecting jinja2 (from altair<6,>=4.0->streamlit)\n",
-      "  Using cached jinja2-3.1.6-py3-none-any.whl.metadata (2.9 kB)\n",
-      "Collecting jsonschema>=3.0 (from altair<6,>=4.0->streamlit)\n",
-      "  Using cached jsonschema-4.23.0-py3-none-any.whl.metadata (7.9 kB)\n",
-      "Collecting narwhals>=1.14.2 (from altair<6,>=4.0->streamlit)\n",
-      "  Using cached narwhals-1.36.0-py3-none-any.whl.metadata (9.2 kB)\n",
-      "Requirement already satisfied: colorama in c:\\users\\public\\git\\sparta_lecture\\.venv\\lib\\site-packages (from click<9,>=7.0->streamlit) (0.4.6)\n",
-      "Collecting gitdb<5,>=4.0.1 (from gitpython!=3.1.19,<4,>=3.0.7->streamlit)\n",
-      "  Using cached gitdb-4.0.12-py3-none-any.whl.metadata (1.2 kB)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\public\\git\\sparta_lecture\\.venv\\lib\\site-packages (from pandas<3,>=1.4.0->streamlit) (2.9.0.post0)\n",
-      "Collecting pytz>=2020.1 (from pandas<3,>=1.4.0->streamlit)\n",
-      "  Using cached pytz-2025.2-py2.py3-none-any.whl.metadata (22 kB)\n",
-      "Collecting tzdata>=2022.7 (from pandas<3,>=1.4.0->streamlit)\n",
-      "  Using cached tzdata-2025.2-py2.py3-none-any.whl.metadata (1.4 kB)\n",
-      "Collecting charset-normalizer<4,>=2 (from requests<3,>=2.27->streamlit)\n",
-      "  Using cached charset_normalizer-3.4.1-cp313-cp313-win_amd64.whl.metadata (36 kB)\n",
-      "Collecting idna<4,>=2.5 (from requests<3,>=2.27->streamlit)\n",
-      "  Using cached idna-3.10-py3-none-any.whl.metadata (10 kB)\n",
-      "Collecting urllib3<3,>=1.21.1 (from requests<3,>=2.27->streamlit)\n",
-      "  Using cached urllib3-2.4.0-py3-none-any.whl.metadata (6.5 kB)\n",
-      "Collecting certifi>=2017.4.17 (from requests<3,>=2.27->streamlit)\n",
-      "  Using cached certifi-2025.4.26-py3-none-any.whl.metadata (2.5 kB)\n",
-      "Collecting smmap<6,>=3.0.1 (from gitdb<5,>=4.0.1->gitpython!=3.1.19,<4,>=3.0.7->streamlit)\n",
-      "  Using cached smmap-5.0.2-py3-none-any.whl.metadata (4.3 kB)\n",
-      "Collecting MarkupSafe>=2.0 (from jinja2->altair<6,>=4.0->streamlit)\n",
-      "  Using cached MarkupSafe-3.0.2-cp313-cp313-win_amd64.whl.metadata (4.1 kB)\n",
-      "Collecting attrs>=22.2.0 (from jsonschema>=3.0->altair<6,>=4.0->streamlit)\n",
-      "  Using cached attrs-25.3.0-py3-none-any.whl.metadata (10 kB)\n",
-      "Collecting jsonschema-specifications>=2023.03.6 (from jsonschema>=3.0->altair<6,>=4.0->streamlit)\n",
-      "  Using cached jsonschema_specifications-2025.4.1-py3-none-any.whl.metadata (2.9 kB)\n",
-      "Collecting referencing>=0.28.4 (from jsonschema>=3.0->altair<6,>=4.0->streamlit)\n",
-      "  Using cached referencing-0.36.2-py3-none-any.whl.metadata (2.8 kB)\n",
-      "Collecting rpds-py>=0.7.1 (from jsonschema>=3.0->altair<6,>=4.0->streamlit)\n",
-      "  Using cached rpds_py-0.24.0-cp313-cp313-win_amd64.whl.metadata (4.2 kB)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\public\\git\\sparta_lecture\\.venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas<3,>=1.4.0->streamlit) (1.17.0)\n",
-      "Using cached streamlit-1.44.1-py3-none-any.whl (9.8 MB)\n",
-      "Using cached altair-5.5.0-py3-none-any.whl (731 kB)\n",
-      "Using cached blinker-1.9.0-py3-none-any.whl (8.5 kB)\n",
-      "Using cached cachetools-5.5.2-py3-none-any.whl (10 kB)\n",
-      "Using cached click-8.1.8-py3-none-any.whl (98 kB)\n",
-      "Using cached GitPython-3.1.44-py3-none-any.whl (207 kB)\n",
-      "Using cached numpy-2.2.5-cp313-cp313-win_amd64.whl (12.6 MB)\n",
-      "Using cached packaging-24.2-py3-none-any.whl (65 kB)\n",
-      "Using cached pandas-2.2.3-cp313-cp313-win_amd64.whl (11.5 MB)\n",
-      "Using cached pillow-11.2.1-cp313-cp313-win_amd64.whl (2.7 MB)\n",
-      "Using cached protobuf-5.29.4-cp310-abi3-win_amd64.whl (434 kB)\n",
-      "Using cached pyarrow-19.0.1-cp313-cp313-win_amd64.whl (25.2 MB)\n",
-      "Using cached pydeck-0.9.1-py2.py3-none-any.whl (6.9 MB)\n",
-      "Using cached requests-2.32.3-py3-none-any.whl (64 kB)\n",
-      "Using cached tenacity-9.1.2-py3-none-any.whl (28 kB)\n",
-      "Using cached toml-0.10.2-py2.py3-none-any.whl (16 kB)\n",
-      "Using cached typing_extensions-4.13.2-py3-none-any.whl (45 kB)\n",
-      "Using cached watchdog-6.0.0-py3-none-win_amd64.whl (79 kB)\n",
-      "Using cached certifi-2025.4.26-py3-none-any.whl (159 kB)\n",
-      "Using cached charset_normalizer-3.4.1-cp313-cp313-win_amd64.whl (102 kB)\n",
-      "Using cached gitdb-4.0.12-py3-none-any.whl (62 kB)\n",
-      "Using cached idna-3.10-py3-none-any.whl (70 kB)\n",
-      "Using cached jinja2-3.1.6-py3-none-any.whl (134 kB)\n",
-      "Using cached jsonschema-4.23.0-py3-none-any.whl (88 kB)\n",
-      "Using cached narwhals-1.36.0-py3-none-any.whl (331 kB)\n",
-      "Using cached pytz-2025.2-py2.py3-none-any.whl (509 kB)\n",
-      "Using cached tzdata-2025.2-py2.py3-none-any.whl (347 kB)\n",
-      "Using cached urllib3-2.4.0-py3-none-any.whl (128 kB)\n",
-      "Using cached attrs-25.3.0-py3-none-any.whl (63 kB)\n",
-      "Using cached jsonschema_specifications-2025.4.1-py3-none-any.whl (18 kB)\n",
-      "Using cached MarkupSafe-3.0.2-cp313-cp313-win_amd64.whl (15 kB)\n",
-      "Using cached referencing-0.36.2-py3-none-any.whl (26 kB)\n",
-      "Using cached rpds_py-0.24.0-cp313-cp313-win_amd64.whl (239 kB)\n",
-      "Using cached smmap-5.0.2-py3-none-any.whl (24 kB)\n",
-      "Installing collected packages: pytz, watchdog, urllib3, tzdata, typing-extensions, toml, tenacity, smmap, rpds-py, pyarrow, protobuf, pillow, packaging, numpy, narwhals, MarkupSafe, idna, click, charset-normalizer, certifi, cachetools, blinker, attrs, requests, referencing, pandas, jinja2, gitdb, pydeck, jsonschema-specifications, gitpython, jsonschema, altair, streamlit\n",
-      "  Attempting uninstall: packaging\n",
-      "    Found existing installation: packaging 25.0\n",
-      "    Uninstalling packaging-25.0:\n",
-      "      Successfully uninstalled packaging-25.0\n",
-      "Successfully installed MarkupSafe-3.0.2 altair-5.5.0 attrs-25.3.0 blinker-1.9.0 cachetools-5.5.2 certifi-2025.4.26 charset-normalizer-3.4.1 click-8.1.8 gitdb-4.0.12 gitpython-3.1.44 idna-3.10 jinja2-3.1.6 jsonschema-4.23.0 jsonschema-specifications-2025.4.1 narwhals-1.36.0 numpy-2.2.5 packaging-24.2 pandas-2.2.3 pillow-11.2.1 protobuf-5.29.4 pyarrow-19.0.1 pydeck-0.9.1 pytz-2025.2 referencing-0.36.2 requests-2.32.3 rpds-py-0.24.0 smmap-5.0.2 streamlit-1.44.1 tenacity-9.1.2 toml-0.10.2 typing-extensions-4.13.2 tzdata-2025.2 urllib3-2.4.0 watchdog-6.0.0\n",
+      "Collecting openai\n",
+      "  Using cached openai-1.76.0-py3-none-any.whl.metadata (25 kB)\n",
+      "Collecting anyio<5,>=3.5.0 (from openai)\n",
+      "  Using cached anyio-4.9.0-py3-none-any.whl.metadata (4.7 kB)\n",
+      "Collecting distro<2,>=1.7.0 (from openai)\n",
+      "  Using cached distro-1.9.0-py3-none-any.whl.metadata (6.8 kB)\n",
+      "Collecting httpx<1,>=0.23.0 (from openai)\n",
+      "  Using cached httpx-0.28.1-py3-none-any.whl.metadata (7.1 kB)\n",
+      "Collecting jiter<1,>=0.4.0 (from openai)\n",
+      "  Using cached jiter-0.9.0-cp313-cp313-win_amd64.whl.metadata (5.3 kB)\n",
+      "Collecting pydantic<3,>=1.9.0 (from openai)\n",
+      "  Using cached pydantic-2.11.3-py3-none-any.whl.metadata (65 kB)\n",
+      "Collecting sniffio (from openai)\n",
+      "  Using cached sniffio-1.3.1-py3-none-any.whl.metadata (3.9 kB)\n",
+      "Collecting tqdm>4 (from openai)\n",
+      "  Using cached tqdm-4.67.1-py3-none-any.whl.metadata (57 kB)\n",
+      "Requirement already satisfied: typing-extensions<5,>=4.11 in c:\\users\\public\\git\\sparta_lecture\\.venv\\lib\\site-packages (from openai) (4.13.2)\n",
+      "Requirement already satisfied: idna>=2.8 in c:\\users\\public\\git\\sparta_lecture\\.venv\\lib\\site-packages (from anyio<5,>=3.5.0->openai) (3.10)\n",
+      "Requirement already satisfied: certifi in c:\\users\\public\\git\\sparta_lecture\\.venv\\lib\\site-packages (from httpx<1,>=0.23.0->openai) (2025.4.26)\n",
+      "Collecting httpcore==1.* (from httpx<1,>=0.23.0->openai)\n",
+      "  Using cached httpcore-1.0.9-py3-none-any.whl.metadata (21 kB)\n",
+      "Collecting h11>=0.16 (from httpcore==1.*->httpx<1,>=0.23.0->openai)\n",
+      "  Using cached h11-0.16.0-py3-none-any.whl.metadata (8.3 kB)\n",
+      "Collecting annotated-types>=0.6.0 (from pydantic<3,>=1.9.0->openai)\n",
+      "  Using cached annotated_types-0.7.0-py3-none-any.whl.metadata (15 kB)\n",
+      "Collecting pydantic-core==2.33.1 (from pydantic<3,>=1.9.0->openai)\n",
+      "  Using cached pydantic_core-2.33.1-cp313-cp313-win_amd64.whl.metadata (6.9 kB)\n",
+      "Collecting typing-inspection>=0.4.0 (from pydantic<3,>=1.9.0->openai)\n",
+      "  Using cached typing_inspection-0.4.0-py3-none-any.whl.metadata (2.6 kB)\n",
+      "Requirement already satisfied: colorama in c:\\users\\public\\git\\sparta_lecture\\.venv\\lib\\site-packages (from tqdm>4->openai) (0.4.6)\n",
+      "Using cached openai-1.76.0-py3-none-any.whl (661 kB)\n",
+      "Using cached anyio-4.9.0-py3-none-any.whl (100 kB)\n",
+      "Using cached distro-1.9.0-py3-none-any.whl (20 kB)\n",
+      "Using cached httpx-0.28.1-py3-none-any.whl (73 kB)\n",
+      "Using cached httpcore-1.0.9-py3-none-any.whl (78 kB)\n",
+      "Using cached jiter-0.9.0-cp313-cp313-win_amd64.whl (204 kB)\n",
+      "Using cached pydantic-2.11.3-py3-none-any.whl (443 kB)\n",
+      "Using cached pydantic_core-2.33.1-cp313-cp313-win_amd64.whl (2.0 MB)\n",
+      "Using cached sniffio-1.3.1-py3-none-any.whl (10 kB)\n",
+      "Using cached tqdm-4.67.1-py3-none-any.whl (78 kB)\n",
+      "Using cached annotated_types-0.7.0-py3-none-any.whl (13 kB)\n",
+      "Using cached typing_inspection-0.4.0-py3-none-any.whl (14 kB)\n",
+      "Using cached h11-0.16.0-py3-none-any.whl (37 kB)\n",
+      "Installing collected packages: typing-inspection, tqdm, sniffio, pydantic-core, jiter, h11, distro, annotated-types, pydantic, httpcore, anyio, httpx, openai\n",
+      "Successfully installed annotated-types-0.7.0 anyio-4.9.0 distro-1.9.0 h11-0.16.0 httpcore-1.0.9 httpx-0.28.1 jiter-0.9.0 openai-1.76.0 pydantic-2.11.3 pydantic-core-2.33.1 sniffio-1.3.1 tqdm-4.67.1 typing-inspection-0.4.0\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "pip install streamlit"
+    "pip install openai"
    ]
   }
  ],
